# ProgDyn

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  ProgDyn  ProgDyn.cbp  README.md  cmake_install.cmake  main.c
header/: dichotomy.h  function.h  knapsack.h  pgcb.h  test.h
src/: dichotomy.c  function.c  knapsack.c  pgcb.c  test.c
